--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
   />
-  <title>Davon Morris | Portfolio</title>
+  <title>Davon Morris | Resume</title>
 
   <!-- Bootstrap CSS -->
   <link
@@ -27,13 +27,13 @@
 <body>
   <div id="app"></div>
 
-  <!-- Bootstrap Bundle for any JS components (optional) -->
+  <!-- Bootstrap JS Bundle -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"
   ></script>
 
-  <!-- Your Vite entry -->
+  <!-- Vite entry -->
   <script type="module" src="./src/main.js"></script>
 </body>
 </html>
